--- a/core/templates/core/base_modern.html
+++ b/core/templates/core/base_modern.html
@@ -4,6 +4,7 @@
 <html lang="{{ LANGUAGE_CODE|default:'en' }}">
 <head>
     <meta charset="UTF-8">
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Kibray{% endblock %}</title>
@@ -84,6 +85,10 @@
     
     {# Core JavaScript #}
     <script src="{% static 'core/js/kibray-core.js' %}"></script>
+    {# NotificationCenter React bundle (only if authenticated) #}
+    {% if user.is_authenticated %}
+    <script type="module" src="{% static 'gantt/notification.DugCJ5ir.js' %}"></script>
+    {% endif %}
     
     {# Page-specific JavaScript #}
     {% block extra_js %}{% endblock %}
